# cc_learning

./: .clang-format  .gitignore  BUILD.gn  readme.md
src/: BUILD.gn  CRPT_test.cc  args_test.cc  cc_learning_test.h  forward_test.cc  function_test.cc  iterator_test.cc  move_test.cc  nested_class_test.cc  run.sh  run_all_test.cc  shared_ptr_test.cc  static_cast_test.cc  string_test.cc  thread_local_test.cc  uaf_unique_raw_ptr.cc  unique_ptr_test.cc  vector_test.cc  weak_ptr_test.cc
src/DesignPatterns/: delegate_pattern_test.cc  dependency_injection_pattern_test.cc  factory_pattern_test.cc  observer_pattern_test.cc  proxy_pattern_test.cc  singleton_pattern_test.cc  strategy_pattern_test.cc
src/cc_chromium/: BUILD.gn  cc_chromium_buildflags.gni  cc_chromium_test.h  logging_test.cc  run_all_tests.cc
src/cc_chromium/mojo_test/: BUILD.gn  mojo_test_multiple_process.cc  mojo_test_multiple_process_bindings.cc  mojo_test_simple.cc  mojo_test_single_process.cc
src/cc_chromium/mojo_test/mojom/: BUILD.gn  consumer_service_manifest.json  mojom_test_simple.mojom  test.mojom  test2.mojom  test3.mojom  test4.mojom  test_service.mojom  test_service_manifest.json
src/cc_test/: BUILD.gn  CRPT_test.cc  aligned_storage_test.cc  cc_learning_test.h  forward_test.cc  function_test.cc  iterator_test.cc  move_test.cc  run_all_test.cc  rvalue_test.cc  static_cast_test.cc  thread_local_test.cc  uaf_unique_raw_ptr.cc  unique_ptr_test.cc  vector_test.cc
src/cc_test/linux/: mmap_test.c
src/test_const/: test_const.cc  test_const.h
tools/linux_arm64/: ninja
tools/mac/: gn
(+11 files in other folders)
