group("cc_chromium") {
    testonly = true
    deps = [
        "mojo_test:mojo_test_single_process"
    ]
}

executable("cc_chromium") {
  testonly = true
  sources = [ 
    "run_all_tests.cc"
  ]
  deps = [
    "//base/test:run_all_unittests",
    "//base/test:test_support",
    "//testing/gmock",
    "//testing/gtest",
   ]
}