# import("//build/buildflag_header.gni")
#import("//cc_chromium/cc_chromium_buildflags.gni")


#flags = []
# buildflag_header("buildflags") {
#   header = "buildflags/buildflags.h"
#   if (enable_mojo_test) {
#     print ("enable mojo test 1")
#     flags += [ "ENABLE_MOJO_TEST=true" ]
#   } 
#   else {
#     flags += [ "ENABLE_MOJO_TEST=false" ]
#   }
# }

executable("cc_chromium") {
  sources = [ "run_all_tests.cc" ]
  testonly = true
  deps = [
    # run all unit tests
    # "//base/test:run_all_unittests",
    "//base/test:test_support",
    "//testing/gmock",
    # one unit test once
    "//testing/gtest:gtest_main",
    "//base",
    "//mojo/public",
    "//mojo/core/embedder",
    "//cc_chromium/mojo_test/mojom:mojom",
  ] 
}